fixed cover photo not showing on contact.html

--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ body{
 	background-color: black;
 }
 #contactmebg{
-	background: url("./images/coverphotos/digitalbinarycode.JPG");
+	background: url("./images/coverphotos/digitalbinarycode.jpg");
 	background-size: cover;
 	background-repeat: no-repeat; 
 }
